<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<TableLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateLabel"  />
    </TableRow>
    <TableRow>
        <RadioGroup android:id="@+id/calculateRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoFlowLabel"
                android:checked="true" />
            <RadioButton android:id="@+id/radio_qva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoQVALabel" />
            <RadioButton android:id="@+id/radio_vqa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoVQALabel" />
            <RadioButton android:id="@+id/radio_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoDepthLabel" />
        </RadioGroup>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputFlowLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputFlowLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputFlowEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false"/>
        <Spinner android:id="@+id/inputFlowUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputFlowUnits"
            android:prompt="@string/selectUnit_prompt"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputDepthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputDepthLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputDepthEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"/>
        <Spinner android:id="@+id/inputDepthUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputDepthUnits"
            android:prompt="@string/selectUnit_prompt"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputVelocityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputVelocityLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputVelocityEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false"/>
        <Spinner android:id="@+id/inputVelocityUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputVelocityUnits"
            android:prompt="@string/selectUnit_prompt"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputDiameterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputDiameterLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputDiameterEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"/>
        <Spinner android:id="@+id/inputDiameterUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputDiameterUnits"
            android:prompt="@string/selectUnit_prompt"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputSlopeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputSlopeLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputSlopeEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"/>
        <Spinner android:id="@+id/inputSlopeUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputSlopeUnits"
            android:prompt="@string/selectUnit_prompt"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputNValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputNValueLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputNValueEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hintNValue"/>
        <Spinner android:id="@+id/inputNValueListSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inputNValueList"
            android:prompt="@string/selectNValue_prompt"/>
    </TableRow>

    <TableRow>
        <TextView android:id="@+id/inputdDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputdDLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputdDEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputQCapLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputQCapLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputQCapEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputCapacityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputCapacityLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputCapacityEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputWetPerimiterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputWetPerimiterLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputWetPerimiterEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false" />

    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputFlowAreaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputFlowAreaLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputFlowAreaEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputVelHeadLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputVelHeadLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputVelHeadEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/inputCapLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputCapLabel"/>
    </TableRow>
    <TableRow>
        <EditText android:id="@+id/inputCapEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="1234567890."
            android:hint="@string/hint0"
            android:state_enabled="false" />
    </TableRow>

</TableLayout>
</ScrollView>